...

  @override
  Widget build(BuildContext context) {
    return BlocProvider(
      create: (_) => getIt<AddressBloc>(),
      child: Scaffold(
        appBar: AppBar(title: const Text('Busca de CEP'), centerTitle: true),
        body: Align(
          alignment: Alignment.topCenter,
          child: ConstrainedBox(
            constraints: const BoxConstraints(maxWidth: 800),
            child: const Padding(
              padding: EdgeInsets.all(16.0),
...
              builder: (context, state) {
                if (state is AddressInitial) {
                  return const Center(
                    child: Padding(
                      padding: EdgeInsets.all(32.0),
                      child: Text(
                        'Digite um CEP para buscar',
                        style: TextStyle(fontSize: 16, color: Colors.grey),
                      ),
                    ),
                  );
                } else if (state is AddressLoading) {
                  return const Center(
...
